Stop reset button shifting layout

--- a/src/core-plugins/pillbox-menus/components/Menu.less
+++ b/src/core-plugins/pillbox-menus/components/Menu.less
@@ -187,6 +187,7 @@
     opacity: 0.6;
     flex: 1;
     text-align: right;
+    margin: -2px;
   }
 
   .dcg-tooltip-hit-area-container {
